--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/bootstrap": "^5.2.6",
+    "@types/react": "^18.2.11",
+    "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-modal": "^2.2.4",
@@ -18,7 +21,8 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.2.3",
-    "redux-saga-effects": "^1.1.0",
+    "redux-saga-effects": "^1.0.0",
+    "typescript": "^5.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -27,7 +31,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "compile": "tsc"
   },
   "eslintConfig": {
     "extends": [
